--- a/README
+++ b/README
@@ -24,4 +24,4 @@ Layers trivia:
 See link for the full research: https://www.wolframcloud.com/objects/mewolfram0/Published/Classify%20MNIST
 
 These are alternative approaches worth mentioning:
--
+- A residual network with data augmentation (more precision, but much trickier and longer to train): https://www.wolframcloud.com/objects/mewolfram0/Published/Classify%20MNIST%20Residual%20Augmented
