--- a/digito-ui/src/canvas-draw/README
+++ b/digito-ui/src/canvas-draw/README
@@ -1,3 +1,3 @@
 This module was ported from https://github.com/embiem/react-canvas-draw
-The original project was flooded with extremely outdated vulnerable dependencies and did not allow extracting graphics
-from the canvas in a way other than saving into a file.
+The original project was full of outdated vulnerable dependencies and did not allow extracting graphics
+from the canvas in any way other than saving into a file.
